* dir - Get driving directions from one place to another (from Pete H).
* wik - Wikipedia search (from Thad Kerosky)
* nup - Nupedia (from Thad Kerosky)
* exp - Expedia (from Allen B. MacKenzie)
* spcs - Send Sprint PCS One-Way web messages (from Rick Olson)
* pinp - ServiceObjects' DOTS GeoPinpoint IP address Location converter (from Thad Kerosky)

Modified Searches

* ups - Tim Dierks fixed to zero out old search values from the form and 
        edit out non-alphanumerics (since value was used in eval, single 
        quotes could cause JS errors).
* fv - Allen B. MacKenzie fixed a bug.
* pcm - Thad K. updated.

Enhancements

* Names that resemble FTP servers (i.e., start with "ftp.") are opened 
  with the ftp: protocol.  (Feature request #598368)
* Brent Beardsley modified the add-on support to load all xml files
  for an add-on, not just one.
* Incorporated Thad Kerosky's changes to googlespell add-on to display
  results in a popup window.  Added a common method, displayPopupMessage,
  to defer_tools.js.
* dictionarypop add-on is now available (from Thad Kerosky)

Bug Fixes

* Made googlespell add-on function names unique so there would not be
  any collisions with other methods.


-- What's new for 3.0.0.24 (beta)

New Searches

* rfc - search the Internet RFC/STD/FYI/BCP Archives (from Joey Lesh)
* cp - search for CodeProject, a code sharing site (from Andreas Saurwein)
* vir - search http://www.virusbtn.com/ for virus information (from John Bairen)
* infosec - search http://www.infosecuritymag.com/ for security information (from John Bairen)
* pg - Project Gutenberg/Public Domain book (pg) search (from Thad Kerosky)
* slash - Search Slashdot (from Paul Bowers)
* short - Abbreviate long and convoluted URLs (from Reginald Braithwaite-Lee)
* palm - PalmGear.com search (from Herman Fuchs)
* fv - FlightView search (from Allen B. MacKenzie)

Modified Searches

* yp - Tim Dierks added support for addresses